Fixes layout bug in Safari.

--- a/public/src/stylesheets/map.less
+++ b/public/src/stylesheets/map.less
@@ -1,5 +1,5 @@
 
 
 #leaflet {
-  height: 100%;
+  height: inherit;
 }
